objects/Commercial_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account_Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <label>Billing_Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <displayFormat>I-{0000}</displayFormat>
        <label>Invoice_Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity_Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Commercial Invoice</label>
    <nameField>
        <label>Commercial_Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Invoices</pluralLabel>
    <recordTypes>
        <fullName>Commercial_Invoice_Record_Type</fullName>
        <active>true</active>
        <label>Commercial_Invoice_Record_Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>